--- a/cal.css
+++ b/cal.css
@@ -21,7 +21,7 @@ h1 {
 }
 
 /* Gradient text only on Webkit */
-.warn {
+.warning {
   background: -webkit-linear-gradient(45deg,  #c97874 10%, #463042 90%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -47,12 +47,6 @@ h1 {
   }
 }
 
-/* Calculator after dividing by zero */
-.broken {
-  animation: broken 3s;
-  transform: translate3d(0,-1000px,0);
-  opacity: 0;
-}
 
 .viewer {
   color: #c97874;
@@ -117,31 +111,6 @@ button {
   width: 600px;
 }
 
-/* Reset button */
-
-.reset {
-  background: rgba(201,120,116,.28);
-  color:#c97874;
-  font-weight: 400;
-  margin-left: -77px;
-  padding: 0.5em 1em;
-  position: absolute;
-    top: -20em;
-    left: 50%;
-  width: auto;
-  height: auto;
-  
-  &:hover {
-    background: #c97874;
-    color: #100a1c;    
-  }
-  
-  /* When button is revealed */
-  &.show {
-    top: 20em;
-    animation: fadein 4s;
-  }
-}
 
 /* Animations */
 
@@ -161,62 +130,8 @@ button {
   }
 }
 
-/* Division by zero animation */
-@keyframes broken {
-  0% {
-    transform: translate3d(0,0,0);
-    opacity: 1;
-  }
 
-  5% {
-    transform: rotate(5deg);
-  }
 
-  15% {
-    transform: rotate(-5deg);
-  }
-
-  20% {
-    transform: rotate(5deg);
-  }
-
-  25% {
-    transform: rotate(-5deg);
-  }
-
-  50% {
-    transform: rotate(45deg);
-  }
-
-  70% {
-    transform: translate3d(0,2000px,0);
-    opacity: 1;
-  }
-
-  75% {
-    opacity: 0;
-  }
-
-  100% {
-    transform: translate3d(0,-2000px,0);
-  }
-}
-
-/* Reset button fadein */
-@keyframes fadein {
-  0% {
-    top: 20em;
-    opacity: 0;
-  }
-  
-  50% {
-    opacity: 0;
-  }
-  
-  100% {
-    opacity: 1;
-  }
-}
 
 @media (min-width: 420px) {
   .calculator {
